# robots

./: .gitignore  README.md  calibration_cam.sh  camera_calibration_config.sh  camera_calibration_start.sh  client_config_gz.config  controller.sh  dados_calibracao.yaml  go.sh  image_launch.sh  image_view.sh  world.sh
src/my_bot/: package.xml  setup.py
src/my_bot/controller/: __init__.py  camera_calibration_controller.py  robot_controller copy.py  robot_controller.py  test_controller.py
src/my_bot/launch/: camera_calibration.launch.py  diff_drive.launch.py  play.launch.py  world.launch.py  world.launch.py.save
src/my_bot/model/: __init__.py  adjacency_matrix.py  navigation.py  robot.py  tracking.py
src/my_bot/models/aruco_camera_calibration/: model.config  model.sdf
src/my_bot/models/camera/: model.sdf
src/my_bot/models/camera_90/: model.sdf
src/my_bot/models/camera_v2/: model.sdf
src/my_bot/models/car_bot/: model.config  model.sdf
src/my_bot/models/imu/: model.config
src/my_bot/models/lidar/: model.sdf
src/my_bot/my_bot/: calibration.py  lanefollowing.py
src/my_bot/test/: bib.py  constants.py  orientation.py  test_angle.py  test_graph_data.py  test_lidar.py  test_robo.py  test_util_functions.py
src/my_bot/utils/: __init__.py  bib.py  bridge.py  camera_calibration.py  constants.py  graph.py  graph_data.py  maker_aruco.py  orientation.py  sensor_camera copy.py  sensor_camera.py  sensor_camera_copy.py  sensor_imu.py  sensor_lidar.py  sensor_magnetometer.py
src/my_bot/worlds/: camera_calibration.world  mini.sdf  mini.world  scene.config  world.sdf
(+468 files in other folders)
